# desktop-app

./: package-lock.json  package.json
experiments/filefinder-linux/: Cargo.toml  filefinder.rs  main  main.rs
experiments/filefinder-linux/filesystem/: linux.rs  mod.rs  windows.rs
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: filefinder.rs  main.rs
src-tauri/src/filesystem/: linux.rs
