[package]
name = "filefinder-linux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_UI_Shell"]}

[[bin]]
name = "filefinder-linux"
path = "main.rs"
